Split into business vs rendering loci
Add lots of documentation.

--- a/example/index.html
+++ b/example/index.html
@@ -10,11 +10,11 @@
   <body>
     <div id="calculator-container"></div>
 
-    <script src="./stoneham-override-calculator.js"></script>
-    <script>
-      window.stonehamOverrideCalculator.renderCalculator(
-        "calculator-container",
-      );
-    </script>
+    <script
+      src="./stoneham-override-calculator.js"
+      async
+      defer
+      onload="window.stonehamOverrideCalculator.renderCalculator('calculator-container')"
+    ></script>
   </body>
 </html>
